--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -111,6 +111,8 @@ h1, .h1, h2, .h2, h4, .h4
 h1, .h1
 	font-size: 32px
 	margin-bottom: 25px
+	+r(767)
+		text-align: center
 h2, .h2
 	font-size: 26px
 	margin-bottom: 30px
