--- a/css/screen.css
+++ b/css/screen.css
@@ -80,29 +80,29 @@ h4, .h4 { font-size: 18px; }
 
 [class^="icon-"] { display: inline-block; vertical-align: middle; }
 
-.icon-marker { background: url('../img/icons-sd17ac31eb1.png') 0 -616px no-repeat; width: 13px; height: 21px; }
+.icon-marker { background: url('../img/icons-s83ad3cc3fc.png') 0 -616px no-repeat; width: 13px; height: 21px; }
 
-.icon-velcom { background: url('../img/icons-sd17ac31eb1.png') 0 -897px no-repeat; width: 29px; height: 22px; }
+.icon-velcom { background: url('../img/icons-s83ad3cc3fc.png') 0 -925px no-repeat; width: 29px; height: 22px; }
 
-.icon-mtc { background: url('../img/icons-sd17ac31eb1.png') 0 -647px no-repeat; width: 24px; height: 24px; }
+.icon-mtc { background: url('../img/icons-s83ad3cc3fc.png') 0 -647px no-repeat; width: 24px; height: 24px; }
 
-.icon-phone { background: url('../img/icons-sd17ac31eb1.png') 0 -746px no-repeat; width: 21px; height: 21px; }
+.icon-phone { background: url('../img/icons-s83ad3cc3fc.png') 0 -746px no-repeat; width: 21px; height: 21px; }
 
-.icon-viber { background: url('../img/icons-sd17ac31eb1.png') 0 -929px no-repeat; width: 48px; height: 23px; }
+.icon-viber { background: url('../img/icons-s83ad3cc3fc.png') 0 -957px no-repeat; width: 48px; height: 23px; }
 
-.icon-skype { background: url('../img/icons-sd17ac31eb1.png') 0 -863px no-repeat; width: 24px; height: 24px; }
+.icon-skype { background: url('../img/icons-s83ad3cc3fc.png') 0 -863px no-repeat; width: 24px; height: 24px; }
 
-.icon-adv-marker { background: url('../img/icons-sd17ac31eb1.png') 0 -182px no-repeat; width: 81px; height: 81px; }
+.icon-adv-marker { background: url('../img/icons-s83ad3cc3fc.png') 0 -182px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-indiv { background: url('../img/icons-sd17ac31eb1.png') 0 -91px no-repeat; width: 81px; height: 81px; }
+.icon-adv-indiv { background: url('../img/icons-s83ad3cc3fc.png') 0 -91px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-safe { background: url('../img/icons-sd17ac31eb1.png') 0 -364px no-repeat; width: 81px; height: 81px; }
+.icon-adv-safe { background: url('../img/icons-s83ad3cc3fc.png') 0 -364px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-exp { background: url('../img/icons-sd17ac31eb1.png') 0 0 no-repeat; width: 81px; height: 81px; }
+.icon-adv-exp { background: url('../img/icons-s83ad3cc3fc.png') 0 0 no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-teeth { background: url('../img/icons-sd17ac31eb1.png') 0 -455px no-repeat; width: 81px; height: 81px; }
+.icon-adv-teeth { background: url('../img/icons-s83ad3cc3fc.png') 0 -455px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-money { background: url('../img/icons-sd17ac31eb1.png') 0 -273px no-repeat; width: 81px; height: 81px; }
+.icon-adv-money { background: url('../img/icons-s83ad3cc3fc.png') 0 -273px no-repeat; width: 81px; height: 81px; }
 
 .l { *zoom: 1; }
 .l:after { content: " "; display: table; clear: both; }
@@ -208,7 +208,7 @@ h4, .h4 { font-size: 18px; }
 .m-comm .m-comm__item { font-size: 17px; color: #222; }
 @media only screen and (max-width: 600px) { .m-comm .m-comm__item { padding-bottom: 35px; } }
 .m-comm .m-comm__text { position: relative; padding-bottom: 25px; border-bottom: 1px solid #b7c380; margin-bottom: 25px; }
-.m-comm .m-comm__text:before { content: ""; position: absolute; bottom: -11px; left: 48px; background: url('../img/icons-sd17ac31eb1.png') 0 -842px no-repeat; width: 17px; height: 11px; }
+.m-comm .m-comm__text:before { content: ""; position: absolute; bottom: -11px; left: 48px; background: url('../img/icons-s83ad3cc3fc.png') 0 -842px no-repeat; width: 17px; height: 11px; }
 
 .footer .footer__in { max-width: 1158px; margin: 0 auto; background: #7d9601; text-align: center; padding: 35px 25px 10px; }
 .footer .footer__adress { margin-bottom: 20px; }
@@ -231,7 +231,7 @@ h4, .h4 { font-size: 18px; }
 @media only screen and (max-width: 767px) { .hamburger { right: 10px; top: 16px; } }
 
 .mob-menu { position: absolute; left: 0; right: 0; top: 0; padding-bottom: 105px; padding-top: 70px; background: #b3cb3b; text-align: center; z-index: 99; }
-.mob-menu .mob-menu__close { position: absolute; top: 36px; right: 36px; background: url('../img/icons-sd17ac31eb1.png') 0 -546px no-repeat; width: 30px; height: 30px; }
+.mob-menu .mob-menu__close { position: absolute; top: 36px; right: 36px; background: url('../img/icons-s83ad3cc3fc.png') 0 -546px no-repeat; width: 30px; height: 30px; }
 .mob-menu .mob-menu__list { margin-bottom: 60px; }
 .mob-menu .mob-menu__list li { margin-bottom: 30px; }
 .mob-menu .mob-menu__list li a { font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; text-transform: uppercase; color: #222; }
@@ -259,34 +259,6 @@ h4, .h4 { font-size: 18px; }
 
 .gallery { margin-bottom: 30px; }
 
-<<<<<<< HEAD
-.license .h1 { margin-bottom: 30px; }
-.license .license__list { font-size: 0; margin-left: -3%; }
-@media only screen and (max-width: 900px) { .license .license__list { margin-left: -5%; } }
-@media only screen and (max-width: 767px) { .license .license__list { margin-left: -3%; } }
-@media only screen and (max-width: 600px) { .license .license__list { margin-left: -5%; } }
-.license .license__item { display: inline-block; vertical-align: top; width: 22%; margin: 40px 0 28px 3%; }
-@media only screen and (max-width: 900px) { .license .license__item { width: 45%; margin-left: 5%; } }
-@media only screen and (max-width: 767px) { .license .license__item { width: 22%; margin-left: 3%; } }
-@media only screen and (max-width: 600px) { .license .license__item { width: 45%; margin-left: 5%; } }
-.license .license__item a { display: block; text-decoration: none; }
-.license .license__item a:hover span { color: #7e960d; border-color: transparent; }
-.license .license__item a:hover .license__img:before { opacity: 1; }
-.license .license__item a .license__img { position: relative; margin-bottom: 10px; border-radius: 3px; }
-.license .license__item a .license__img:before { content: ""; position: absolute; top: 0; bottom: 0; right: 0; left: 0; border-radius: 3px; border: 3px solid #7e960d; opacity: 0; -moz-transition: opacity 300ms; -o-transition: opacity 300ms; -webkit-transition: opacity 300ms; transition: opacity 300ms; }
-.license .license__item a .license__img img { display: block; width: 100%; height: auto; border-radius: 3px; }
-.license .license__item a span { display: inline; font-size: 15px; color: #222; line-height: 1.2; border-bottom: 1px dotted; -moz-transition: color 300ms, border-color 300ms; -o-transition: color 300ms, border-color 300ms; -webkit-transition: color 300ms, border-color 300ms; transition: color 300ms, border-color 300ms; }
-
-.pagination { text-align: center; font-size: 0; margin-top: 30px; }
-.pagination ul { display: inline-block; border: 1px solid #7e960d; }
-.pagination ul li { display: inline-block; border-left: 1px solid #7e960d; }
-.pagination ul li:first-child { border-left: none; }
-.pagination ul li a { display: block; width: 47px; height: 38px; line-height: 38px; font-size: 15px; color: #222; text-decoration: none; background: #b3cb3b; -moz-transition: color 300ms; -o-transition: color 300ms; -webkit-transition: color 300ms; transition: color 300ms; }
-.pagination ul li a:hover, .pagination ul li a.is-active { color: #fff; }
-.pagination ul li a.is-active { background: #7e960d; }
-
-.content { padding-bottom: 65px; }
-=======
 @media only screen and (max-width: 767px) { .adv { padding: 0 8px; } }
 .adv .adv__list { font-size: 0; }
 .adv .adv__item { display: inline-block; vertical-align: top; *zoom: 1; width: 50%; margin-bottom: 30px; }
@@ -352,7 +324,6 @@ h4, .h4 { font-size: 18px; }
 .radio input + div p { font-size: 13px; color: #c5c5c5; line-height: 1.6; }
 .radio input:checked + div:before { border-color: #fbb959; }
 .radio input:checked + div:after { content: ""; position: absolute; top: 6px; left: 6px; width: 5px; height: 5px; border-radius: 50%; background: #000; }
->>>>>>> 1a97c299d3896f47ca8e42b67a5d36bad7628c59
 
 .error { text-align: center; }
 .error .error__code { margin-bottom: 50px; font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 260px; color: #ccc; line-height: 1; }
@@ -362,6 +333,48 @@ h4, .h4 { font-size: 18px; }
 .error .error__info p { font-size: 15px; color: #222; }
 .error .error__info a { color: #7e960d; }
 .error .error__info a:hover { text-decoration: none; }
+
+.license .h1 { margin-bottom: 30px; }
+.license .license__list { font-size: 0; margin-left: -3%; }
+@media only screen and (max-width: 900px) { .license .license__list { margin-left: -5%; } }
+@media only screen and (max-width: 767px) { .license .license__list { margin-left: -3%; } }
+@media only screen and (max-width: 600px) { .license .license__list { margin-left: -5%; } }
+.license .license__item { display: inline-block; vertical-align: top; width: 22%; margin: 40px 0 28px 3%; }
+@media only screen and (max-width: 900px) { .license .license__item { width: 45%; margin-left: 5%; } }
+@media only screen and (max-width: 767px) { .license .license__item { width: 22%; margin-left: 3%; } }
+@media only screen and (max-width: 600px) { .license .license__item { width: 45%; margin-left: 5%; } }
+.license .license__item a { display: block; text-decoration: none; }
+.license .license__item a:hover span { color: #7e960d; border-color: transparent; }
+.license .license__item a:hover .license__img:before { opacity: 1; }
+.license .license__item a .license__img { position: relative; margin-bottom: 10px; border-radius: 3px; }
+.license .license__item a .license__img:before { content: ""; position: absolute; top: 0; bottom: 0; right: 0; left: 0; border-radius: 3px; border: 3px solid #7e960d; opacity: 0; -moz-transition: opacity 300ms; -o-transition: opacity 300ms; -webkit-transition: opacity 300ms; transition: opacity 300ms; }
+.license .license__item a .license__img img { display: block; width: 100%; height: auto; border-radius: 3px; }
+.license .license__item a span { display: inline; font-size: 15px; color: #222; line-height: 1.2; border-bottom: 1px dotted; -moz-transition: color 300ms, border-color 300ms; -o-transition: color 300ms, border-color 300ms; -webkit-transition: color 300ms, border-color 300ms; transition: color 300ms, border-color 300ms; }
+
+.pagination { text-align: center; font-size: 0; margin-top: 30px; }
+.pagination ul { display: inline-block; border: 1px solid #7e960d; }
+.pagination ul li { display: inline-block; border-left: 1px solid #7e960d; }
+.pagination ul li:first-child { border-left: none; }
+.pagination ul li a { display: block; width: 47px; height: 38px; line-height: 38px; font-size: 15px; color: #222; text-decoration: none; background: #b8ce48; -moz-transition: color 300ms; -o-transition: color 300ms; -webkit-transition: color 300ms; transition: color 300ms; }
+.pagination ul li a:hover, .pagination ul li a.is-active { color: #fff; }
+.pagination ul li a.is-active { background: #7e960d; }
+
+.content { padding-bottom: 65px; }
+
+@media only screen and (max-width: 480px) { .news { padding: 0 22px; } }
+@media only screen and (max-width: 767px) { .news .h1 { text-align: center; } }
+.news .h2 { text-align: center; }
+.news .news__item a { display: block; text-decoration: none; }
+.news .news__item a p { margin-bottom: 0; -moz-transition: color 200ms; -o-transition: color 200ms; -webkit-transition: color 200ms; transition: color 200ms; color: #7e960d; line-height: 1.5; font-size: 17px; }
+.news .news__item a:hover p { color: #b8ce48; }
+.news .news__item a .date { margin-bottom: 0; }
+.news .news__img { margin-bottom: 18px; width: 100%; height: 132px; font-size: 0; overflow: hidden; border-radius: 3px; }
+.news .news__img img { min-width: 100%; min-height: 100%; border-radius: 3px; }
+.news .date { margin-bottom: 39px; }
+@media only screen and (max-width: 767px) { .news .date { text-align: center; } }
+.news .news__all { text-align: center; }
+
+.icon-timing { display: inline-block; background: url('../img/icons-s83ad3cc3fc.png') 0 -897px no-repeat; width: 18px; height: 18px; }
 
 .slick-slider { position: relative; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -ms-touch-action: pan-y; touch-action: pan-y; -webkit-tap-highlight-color: transparent; }
 .slick-slider:hover .slick-prev, .slick-slider:hover .slick-next { -moz-transform: translateX(0); -ms-transform: translateX(0); -webkit-transform: translateX(0); transform: translateX(0); }
@@ -396,9 +409,9 @@ h4, .h4 { font-size: 18px; }
 .slick-prev:before, .slick-next:before { height: 82px; line-height: 82px; -moz-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
 @media only screen and (max-width: 1024px) { .slick-prev, .slick-next { opacity: 0; } }
 
-.slick-prev { left: 12px; background: url('../img/icons-sd17ac31eb1.png') 0 -777px no-repeat; width: 26px; height: 55px; }
+.slick-prev { left: 12px; background: url('../img/icons-s83ad3cc3fc.png') 0 -777px no-repeat; width: 26px; height: 55px; }
 
-.slick-next { right: 12px; background: url('../img/icons-sd17ac31eb1.png') 0 -681px no-repeat; width: 26px; height: 55px; }
+.slick-next { right: 12px; background: url('../img/icons-s83ad3cc3fc.png') 0 -681px no-repeat; width: 26px; height: 55px; }
 
 .slick-dots { text-align: center; position: absolute; margin: 0; bottom: 47px; right: 32px; }
 .slick-dots li { position: relative; display: inline-block; padding: 0 7px; }
