--- a/sass/_andrew.sass
+++ b/sass/_andrew.sass
@@ -1,3 +1,5 @@
+$green1: #7e960d
+$green1-l: #b8ce48
 .license
 	.h1
 		margin-bottom: 30px
@@ -29,7 +31,7 @@
 			text-decoration: none
 			&:hover
 				span
-					color: #7e960d
+					color: $green1
 					border-color: transparent
 				.license__img
 					&:before
@@ -46,7 +48,7 @@
 					right: 0
 					left: 0
 					border-radius: 3px
-					border: 3px solid #7e960d
+					border: 3px solid $green1
 					opacity: 0  
 					+tr(opacity 300ms)
 				img
@@ -68,10 +70,10 @@
 	margin-top: 30px 
 	ul
 		display: inline-block
-		border: 1px solid #7e960d
+		border: 1px solid $green1
 		li
 			display: inline-block		
-			border-left: 1px solid #7e960d
+			border-left: 1px solid $green1
 			&:first-child
 				border-left: none
 			a
@@ -82,11 +84,56 @@
 				font-size: 15px
 				color: $dark
 				text-decoration: none
-				background: #b3cb3b 			
+				background: $green1-l			
 				+tr(color 300ms)
 				&:hover, &.is-active
 					color: #fff	
 				&.is-active
-					background: #7e960d
+					background: $green1
 .content
 	padding-bottom: 65px 
+	
+.news
+	+r(480)
+		padding: 0 22px
+	.h1
+		+r(767)
+			text-align: center			  	
+	.h2
+		text-align: center
+	.news__item
+		a
+			display: block
+			text-decoration: none
+			p
+				margin-bottom: 0
+				+tr(color 200ms)
+				color: $green1
+				line-height: 1.5
+				font-size: 17px
+			&:hover
+				p
+					color: $green1-l
+			.date
+				margin-bottom: 0				
+	.news__img
+		margin-bottom: 18px
+		width: 100%
+		height: 132px
+		font-size: 0
+		overflow: hidden
+		border-radius: 3px
+		img
+			min-width: 100%
+			min-height: 100%
+			border-radius: 3px
+	.date
+		margin-bottom: 39px
+		+r(767)
+			text-align: center		
+	.news__all
+		text-align: center	
+.icon-timing
+	display: inline-block
+	+s(timing)
+	
