--- a/css/screen.css
+++ b/css/screen.css
@@ -81,29 +81,29 @@ h4, .h4 { font-size: 18px; }
 
 [class^="icon-"] { display: inline-block; vertical-align: middle; }
 
-.icon-marker { background: url('../img/icons-s8de896a7b8.png') 0 -716px no-repeat; width: 13px; height: 21px; }
+.icon-marker { background: url('../img/icons-sff1cece8c2.png') 0 -716px no-repeat; width: 13px; height: 21px; }
 
-.icon-velcom { background: url('../img/icons-s8de896a7b8.png') 0 -997px no-repeat; width: 29px; height: 22px; }
+.icon-velcom { background: url('../img/icons-sff1cece8c2.png') 0 -1025px no-repeat; width: 29px; height: 22px; }
 
-.icon-mtc { background: url('../img/icons-s8de896a7b8.png') 0 -747px no-repeat; width: 24px; height: 24px; }
+.icon-mtc { background: url('../img/icons-sff1cece8c2.png') 0 -747px no-repeat; width: 24px; height: 24px; }
 
-.icon-phone { background: url('../img/icons-s8de896a7b8.png') 0 -846px no-repeat; width: 21px; height: 21px; }
+.icon-phone { background: url('../img/icons-sff1cece8c2.png') 0 -846px no-repeat; width: 21px; height: 21px; }
 
-.icon-viber { background: url('../img/icons-s8de896a7b8.png') 0 -1029px no-repeat; width: 48px; height: 23px; }
+.icon-viber { background: url('../img/icons-sff1cece8c2.png') 0 -1057px no-repeat; width: 48px; height: 23px; }
 
-.icon-skype { background: url('../img/icons-s8de896a7b8.png') 0 -963px no-repeat; width: 24px; height: 24px; }
+.icon-skype { background: url('../img/icons-sff1cece8c2.png') 0 -963px no-repeat; width: 24px; height: 24px; }
 
-.icon-adv-marker { background: url('../img/icons-s8de896a7b8.png') 0 -182px no-repeat; width: 81px; height: 81px; }
+.icon-adv-marker { background: url('../img/icons-sff1cece8c2.png') 0 -182px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-indiv { background: url('../img/icons-s8de896a7b8.png') 0 -91px no-repeat; width: 81px; height: 81px; }
+.icon-adv-indiv { background: url('../img/icons-sff1cece8c2.png') 0 -91px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-safe { background: url('../img/icons-s8de896a7b8.png') 0 -364px no-repeat; width: 81px; height: 81px; }
+.icon-adv-safe { background: url('../img/icons-sff1cece8c2.png') 0 -364px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-exp { background: url('../img/icons-s8de896a7b8.png') 0 0 no-repeat; width: 81px; height: 81px; }
+.icon-adv-exp { background: url('../img/icons-sff1cece8c2.png') 0 0 no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-teeth { background: url('../img/icons-s8de896a7b8.png') 0 -455px no-repeat; width: 81px; height: 81px; }
+.icon-adv-teeth { background: url('../img/icons-sff1cece8c2.png') 0 -455px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-money { background: url('../img/icons-s8de896a7b8.png') 0 -273px no-repeat; width: 81px; height: 81px; }
+.icon-adv-money { background: url('../img/icons-sff1cece8c2.png') 0 -273px no-repeat; width: 81px; height: 81px; }
 
 .l { *zoom: 1; }
 .l:after { content: " "; display: table; clear: both; }
@@ -211,7 +211,7 @@ h4, .h4 { font-size: 18px; }
 .comm .slider__item { height: 350px; padding: 2px; }
 .comm .comm__item { font-size: 17px; color: #222; }
 .comm .comm__text { position: relative; padding-bottom: 25px; border-bottom: 1px solid #b7c380; margin-bottom: 25px; }
-.comm .comm__text:before { content: ""; position: absolute; bottom: -11px; left: 48px; background: url('../img/icons-s8de896a7b8.png') 0 -942px no-repeat; width: 17px; height: 11px; }
+.comm .comm__text:before { content: ""; position: absolute; bottom: -11px; left: 48px; background: url('../img/icons-sff1cece8c2.png') 0 -942px no-repeat; width: 17px; height: 11px; }
 
 .footer .footer__in { max-width: 1158px; margin: 0 auto; background: #7d9601; text-align: center; padding: 35px 25px 10px; }
 .footer .footer__adress { margin-bottom: 20px; }
@@ -234,7 +234,7 @@ h4, .h4 { font-size: 18px; }
 @media only screen and (max-width: 767px) { .hamburger { right: 10px; top: 16px; } }
 
 .mob-menu { position: absolute; left: 0; right: 0; top: 0; padding-bottom: 105px; padding-top: 70px; background: #b3cb3b; text-align: center; z-index: 99; }
-.mob-menu .mob-menu__close { position: absolute; top: 36px; right: 36px; background: url('../img/icons-s8de896a7b8.png') 0 -646px no-repeat; width: 30px; height: 30px; }
+.mob-menu .mob-menu__close { position: absolute; top: 36px; right: 36px; background: url('../img/icons-sff1cece8c2.png') 0 -646px no-repeat; width: 30px; height: 30px; }
 .mob-menu .mob-menu__list { margin-bottom: 60px; }
 .mob-menu .mob-menu__list li { margin-bottom: 30px; }
 .mob-menu .mob-menu__list li a { font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; text-transform: uppercase; color: #222; }
@@ -360,11 +360,26 @@ h4, .h4 { font-size: 18px; }
 .pagination ul { display: inline-block; border: 1px solid #7e960d; }
 .pagination ul li { display: inline-block; border-left: 1px solid #7e960d; }
 .pagination ul li:first-child { border-left: none; }
-.pagination ul li a { display: block; width: 47px; height: 38px; line-height: 38px; font-size: 15px; color: #222; text-decoration: none; background: #b3cb3b; -moz-transition: color 300ms; -o-transition: color 300ms; -webkit-transition: color 300ms; transition: color 300ms; }
+.pagination ul li a { display: block; width: 47px; height: 38px; line-height: 38px; font-size: 15px; color: #222; text-decoration: none; background: #b8ce48; -moz-transition: color 300ms; -o-transition: color 300ms; -webkit-transition: color 300ms; transition: color 300ms; }
 .pagination ul li a:hover, .pagination ul li a.is-active { color: #fff; }
 .pagination ul li a.is-active { background: #7e960d; }
 
 .content { padding-bottom: 65px; }
+
+@media only screen and (max-width: 480px) { .news { padding: 0 22px; } }
+@media only screen and (max-width: 767px) { .news .h1 { text-align: center; } }
+.news .h2 { text-align: center; }
+.news .news__item a { display: block; text-decoration: none; }
+.news .news__item a p { margin-bottom: 0; -moz-transition: color 200ms; -o-transition: color 200ms; -webkit-transition: color 200ms; transition: color 200ms; color: #7e960d; line-height: 1.5; font-size: 17px; }
+.news .news__item a:hover p { color: #b8ce48; }
+.news .news__item a .date { margin-bottom: 0; }
+.news .news__img { margin-bottom: 18px; width: 100%; height: 132px; font-size: 0; overflow: hidden; border-radius: 3px; }
+.news .news__img img { min-width: 100%; min-height: 100%; border-radius: 3px; }
+.news .date { margin-bottom: 39px; }
+@media only screen and (max-width: 767px) { .news .date { text-align: center; } }
+.news .news__all { text-align: center; }
+
+.icon-timing { display: inline-block; background: url('../img/icons-sff1cece8c2.png') 0 -997px no-repeat; width: 18px; height: 18px; }
 
 .slick-slider { position: relative; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -ms-touch-action: pan-y; touch-action: pan-y; -webkit-tap-highlight-color: transparent; }
 .slick-slider:hover .slick-prev, .slick-slider:hover .slick-next { -moz-transform: translateX(0); -ms-transform: translateX(0); -webkit-transform: translateX(0); transform: translateX(0); }
@@ -400,9 +415,9 @@ h4, .h4 { font-size: 18px; }
 .slick-prev:before, .slick-next:before { height: 82px; line-height: 82px; -moz-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
 @media only screen and (max-width: 1024px) { .slick-prev, .slick-next { opacity: 0; } }
 
-.slick-prev { left: 12px; background: url('../img/icons-s8de896a7b8.png') 0 -877px no-repeat; width: 26px; height: 55px; }
+.slick-prev { left: 12px; background: url('../img/icons-sff1cece8c2.png') 0 -877px no-repeat; width: 26px; height: 55px; }
 
-.slick-next { right: 12px; background: url('../img/icons-s8de896a7b8.png') 0 -781px no-repeat; width: 26px; height: 55px; }
+.slick-next { right: 12px; background: url('../img/icons-sff1cece8c2.png') 0 -781px no-repeat; width: 26px; height: 55px; }
 
 .slick-dots { text-align: center; position: absolute; margin: 0; bottom: 47px; right: 32px; }
 .slick-dots li { position: relative; display: inline-block; padding: 0 7px; }
@@ -472,7 +487,7 @@ h4, .h4 { font-size: 18px; }
 .fancybox-title-over-wrap { position: absolute; bottom: 0; left: 0; color: #fff; padding: 10px; background: #000; background: rgba(0, 0, 0, 0.8); }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) { #fancybox-loading div { background-image: url("../img/fancybox_loading@2x.gif"); background-size: 24px 24px; } }
-.fancybox-close { position: absolute; top: -33px; right: -48px; background: url('../img/icons-s8de896a7b8.png') 0 -610px no-repeat; width: 26px; height: 26px; cursor: pointer; z-index: 8040; opacity: 0.7; -moz-transition: opacity 300ms; -o-transition: opacity 300ms; -webkit-transition: opacity 300ms; transition: opacity 300ms; }
+.fancybox-close { position: absolute; top: -33px; right: -48px; background: url('../img/icons-sff1cece8c2.png') 0 -610px no-repeat; width: 26px; height: 26px; cursor: pointer; z-index: 8040; opacity: 0.7; -moz-transition: opacity 300ms; -o-transition: opacity 300ms; -webkit-transition: opacity 300ms; transition: opacity 300ms; }
 .fancybox-close:hover { opacity: 1; }
 @media only screen and (max-width: 1024px) { .fancybox-close { display: none; } }
 
@@ -481,8 +496,8 @@ h4, .h4 { font-size: 18px; }
 .fancybox-nav span { position: absolute; top: 50%; margin-top: -27px; cursor: pointer; z-index: 8040; visibility: hidden; opacity: 0; -moz-transition: opacity 300ms; -o-transition: opacity 300ms; -webkit-transition: opacity 300ms; transition: opacity 300ms; }
 @media only screen and (max-width: 768px) { .fancybox-nav span { visibility: visible; opacity: 1; } }
 .fancybox-nav.fancybox-prev { left: 0; }
-.fancybox-nav.fancybox-prev span { left: 10px; background: url('../img/icons-s8de896a7b8.png') 0 -877px no-repeat; width: 26px; height: 55px; }
+.fancybox-nav.fancybox-prev span { left: 10px; background: url('../img/icons-sff1cece8c2.png') 0 -877px no-repeat; width: 26px; height: 55px; }
 .fancybox-nav.fancybox-next { right: 0; }
-.fancybox-nav.fancybox-next span { right: 10px; background: url('../img/icons-s8de896a7b8.png') 0 -781px no-repeat; width: 26px; height: 55px; }
+.fancybox-nav.fancybox-next span { right: 10px; background: url('../img/icons-sff1cece8c2.png') 0 -781px no-repeat; width: 26px; height: 55px; }
 
 .help-block { display: none; }
