--- a/css/screen.css
+++ b/css/screen.css
@@ -259,6 +259,9 @@ h4, .h4 { font-size: 18px; }
 .article ul { margin-bottom: 40px; text-align: left; }
 .article ul li { position: relative; padding-left: 57px; margin-bottom: 13px; }
 .article ul li:before { content: ""; position: absolute; top: 13px; left: 0; width: 36px; height: 1px; background: #7e960d; }
+.article blockquote { display: block; margin-bottom: 20px; padding: 22px; background: #e5f4a0; text-align: left; border: 1px solid #b7c380; font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; color: #222; font-size: 17px; line-height: 24px; }
+.article blockquote a { text-decoration: underline; }
+.article blockquote a:hover { text-decoration: none; }
 
 .gallery { margin-bottom: 30px; }
 
@@ -338,6 +341,34 @@ h4, .h4 { font-size: 18px; }
 .error .error__info p { font-size: 15px; color: #222; }
 .error .error__info a { color: #7e960d; }
 .error .error__info a:hover { text-decoration: none; }
+
+.accordeon.accordeon_price .accordeon__content { padding: 0; }
+.accordeon .accordeon__item:first-child .accordeon__topper { border-width: 1px; }
+.accordeon .accordeon__item.is-active .accordeon__topper { background: #7e960d; color: #fff; }
+.accordeon .accordeon__item.is-active .accordeon__topper:before { -ms-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg); border-color: #fff transparent transparent transparent; }
+@media only screen and (max-width: 568px) { .accordeon .accordeon__item.is-active .accordeon__title { border-bottom: none; } }
+.accordeon .accordeon__item .article { margin-bottom: 0; }
+@media only screen and (max-width: 600px) { .accordeon .accordeon__item .article h3 { margin-bottom: 15px; }
+  .accordeon .accordeon__item .article ul { text-align: center; margin-bottom: 25px; }
+  .accordeon .accordeon__item .article ul li { padding-left: 0; margin-bottom: 10px; }
+  .accordeon .accordeon__item .article ul li:before { display: none; } }
+.accordeon .accordeon__topper { position: relative; padding: 28px 45px 26px 100px; border: 1px solid #7e960d; border-width: 0 1px 1px; font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; color: #222; *zoom: 1; cursor: pointer; -moz-transition: background 200ms, color 200ms; -o-transition: background 200ms, color 200ms; -webkit-transition: background 200ms, color 200ms; transition: background 200ms, color 200ms; }
+.accordeon .accordeon__topper:after { content: " "; display: table; clear: both; }
+.accordeon .accordeon__topper:before { content: ""; position: absolute; top: 50%; left: 41px; margin-top: -4px; width: 0px; height: 0px; border-style: solid; border-width: 8px 9px 0 9px; border-color: #222 transparent transparent transparent; -moz-transition: all 300ms; -o-transition: all 300ms; -webkit-transition: all 300ms; transition: all 300ms; }
+.accordeon .accordeon__topper:hover { background: #b3cb3b; }
+@media only screen and (max-width: 900px) { .accordeon .accordeon__topper { padding: 25px 25px 25px 60px; }
+  .accordeon .accordeon__topper:before { left: 21px; } }
+@media only screen and (max-width: 568px) { .accordeon .accordeon__topper { text-align: center; padding: 20px; }
+  .accordeon .accordeon__topper:before { display: none; } }
+.accordeon .accordeon__title { float: left; font-size: 24px; }
+@media only screen and (max-width: 900px) { .accordeon .accordeon__title { font-size: 21px; } }
+@media only screen and (max-width: 568px) { .accordeon .accordeon__title { float: none; display: inline; border-bottom: 1px dotted; } }
+.accordeon .accordeon__payment { float: right; padding-top: 4px; font-size: 17px; }
+@media only screen and (max-width: 900px) { .accordeon .accordeon__payment { font-size: 15px; } }
+@media only screen and (max-width: 568px) { .accordeon .accordeon__payment { float: none; } }
+.accordeon .accordeon__content { border: 1px solid #7e960d; border-width: 0 1px 1px; padding: 35px 22px 45px; }
+@media only screen and (max-width: 900px) { .accordeon .accordeon__content { padding: 30px 22px; } }
+@media only screen and (max-width: 568px) { .accordeon .accordeon__content { padding: 30px 10px; } }
 
 .license .h1 { margin-bottom: 30px; }
 .license .license__list { font-size: 0; margin-left: -3%; }
