--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -422,6 +422,8 @@
 				width: 36px
 				height: 1px
 				background: #7e960d
+	blockquote
+		+quote			
 .gallery
 	margin-bottom: 30px
 // advantages
@@ -652,4 +654,92 @@
 		a
 			color: #7e960d
 			&:hover
-				text-decoration: none				
+				text-decoration: none
+				
+// vacancy
+.accordeon
+	&.accordeon_price
+		.accordeon__content
+			padding: 0 
+	.accordeon__item
+		&:first-child
+			.accordeon__topper
+				border-width: 1px
+		&.is-active
+			.accordeon__topper
+				background: #7e960d
+				color: #fff
+				&:before
+					+rotate(180)
+					border-color: #fff transparent transparent transparent
+			.accordeon__title
+				+r(568)
+					border-bottom: none
+		.article
+			margin-bottom: 0
+			+r(600)
+				h3
+					margin-bottom: 15px
+				ul
+					text-align: center
+					margin-bottom: 25px
+					li
+						padding-left: 0
+						margin-bottom: 10px
+						&:before
+							display: none
+						 
+	.accordeon__topper
+		position: relative
+		padding: 28px 45px 26px 100px 
+		border: 1px solid #7e960d
+		border-width: 0 1px 1px
+		+light
+		color: $dark
+		+clr
+		cursor: pointer
+		+transition(background 200ms, color 200ms)
+		&:before
+			content: ""
+			position: absolute
+			top: 50%
+			left: 41px
+			margin-top: -4px
+			+arr(18, 8, $dark, b)
+			+tr(all 300ms)
+		&:hover
+			background: #b3cb3b
+		+r(900)
+			padding: 25px 25px 25px 60px
+			&:before
+				left: 21px
+		+r(568)
+			text-align: center
+			padding: 20px
+			&:before
+				display: none 						
+	.accordeon__title
+		float: left
+		font-size: 24px
+		+r(900)
+			font-size: 21px
+		+r(568)
+			float: none
+			display: inline
+			border-bottom: 1px dotted 
+	.accordeon__payment
+		float: right
+		padding-top: 4px
+		font-size: 17px
+		+r(900)
+			font-size: 15px
+		+r(568)
+			float: none	
+	.accordeon__content
+		border: 1px solid #7e960d
+		border-width: 0 1px 1px
+		padding: 35px 22px 45px
+		+r(900)
+			padding: 30px 22px
+		+r(568)
+			padding: 30px 10px								
