--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -37,6 +37,7 @@ body
 	font-size: 17px
 	line-height: 24px
 	a
+		color: $dark
 		text-decoration: underline
 		&:hover
 			text-decoration: none	 
