--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -876,4 +876,59 @@
 		+r(568)
 			display: inline-block
 			text-align: center
-			padding: 20px					
+			padding: 20px
+// doctors
+.doctors
+	.h1
+		margin-bottom: 25px
+	& > p
+		margin-bottom: 35px	
+	.doctors__list
+		padding-left: 4px
+	.doctors__item
+		display: table
+		width: 100%
+		margin-bottom: 35px
+		border-collapse: collapse
+		table-layout: fixed 
+		background: #ceeec2
+		border: 1px solid #b7c380
+		+r(480)
+			display: block
+			text-align: center
+			margin-bottom: 16px 
+	.doctors__img
+		display: table-cell
+		vertical-align: top
+		width: 176px
+		overflow: hidden
+		border-right: 1px solid #b7c380 
+		img
+			display: block
+			margin: 0 auto 
+			height: auto
+			min-height: 100%  
+		+r(480)
+			display: block
+			padding-top: 30px
+			width: 100%
+			img
+				height: auto	
+	.doctors__info
+		display: table-cell
+		vertical-align: top
+		padding: 27px
+		+r(960)
+			padding: 17px 17px 45px 
+		+r(480)
+			display: block	
+	.doctors__name
+		+semibold
+		font-size: 24px
+		margin-bottom: 15px
+		+r(767)
+			font-size: 19px
+			margin-bottom: 10px
+	.doctors__job
+		font-size: 15px
+		margin-bottom: 20px								
