--- a/css/screen.css
+++ b/css/screen.css
@@ -50,9 +50,9 @@ body { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal
 .breadcrumbs ul li a:hover { text-decoration: underline; }
 
 h1, .h1, h2, .h2, h4, .h4 { font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; line-height: 1.3; }
+@media only screen and (max-width: 767px) { h1, .h1, h2, .h2, h4, .h4 { text-align: center; } }
 
 h1, .h1 { font-size: 32px; margin-bottom: 25px; }
-@media only screen and (max-width: 767px) { h1, .h1 { text-align: center; } }
 
 h2, .h2 { font-size: 26px; margin-bottom: 30px; }
 
@@ -81,29 +81,43 @@ h4, .h4 { font-size: 18px; }
 
 [class^="icon-"] { display: inline-block; vertical-align: middle; }
 
-.icon-marker { background: url('../img/icons-sff1cece8c2.png') 0 -716px no-repeat; width: 13px; height: 21px; }
+.icon-marker { background: url('../img/icons-s4f1ecb2486.png') 0 -847px no-repeat; width: 13px; height: 21px; }
 
-.icon-velcom { background: url('../img/icons-sff1cece8c2.png') 0 -1025px no-repeat; width: 29px; height: 22px; }
+.icon-velcom { background: url('../img/icons-s4f1ecb2486.png') 0 -1253px no-repeat; width: 29px; height: 22px; }
 
-.icon-mtc { background: url('../img/icons-sff1cece8c2.png') 0 -747px no-repeat; width: 24px; height: 24px; }
+.icon-mtc { background: url('../img/icons-s4f1ecb2486.png') 0 -943px no-repeat; width: 24px; height: 24px; }
 
-.icon-phone { background: url('../img/icons-sff1cece8c2.png') 0 -846px no-repeat; width: 21px; height: 21px; }
+.icon-phone { background: url('../img/icons-s4f1ecb2486.png') 0 -1042px no-repeat; width: 21px; height: 21px; }
 
-.icon-viber { background: url('../img/icons-sff1cece8c2.png') 0 -1057px no-repeat; width: 48px; height: 23px; }
+.icon-viber { background: url('../img/icons-s4f1ecb2486.png') 0 -1321px no-repeat; width: 48px; height: 23px; }
 
-.icon-skype { background: url('../img/icons-sff1cece8c2.png') 0 -963px no-repeat; width: 24px; height: 24px; }
+.icon-skype { background: url('../img/icons-s4f1ecb2486.png') 0 -1191px no-repeat; width: 24px; height: 24px; }
 
-.icon-adv-marker { background: url('../img/icons-sff1cece8c2.png') 0 -182px no-repeat; width: 81px; height: 81px; }
+.icon-adv-marker { background: url('../img/icons-s4f1ecb2486.png') 0 -182px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-indiv { background: url('../img/icons-sff1cece8c2.png') 0 -91px no-repeat; width: 81px; height: 81px; }
+.icon-adv-indiv { background: url('../img/icons-s4f1ecb2486.png') 0 -91px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-safe { background: url('../img/icons-sff1cece8c2.png') 0 -364px no-repeat; width: 81px; height: 81px; }
+.icon-adv-safe { background: url('../img/icons-s4f1ecb2486.png') 0 -364px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-exp { background: url('../img/icons-sff1cece8c2.png') 0 0 no-repeat; width: 81px; height: 81px; }
+.icon-adv-exp { background: url('../img/icons-s4f1ecb2486.png') 0 0 no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-teeth { background: url('../img/icons-sff1cece8c2.png') 0 -455px no-repeat; width: 81px; height: 81px; }
+.icon-adv-teeth { background: url('../img/icons-s4f1ecb2486.png') 0 -455px no-repeat; width: 81px; height: 81px; }
 
-.icon-adv-money { background: url('../img/icons-sff1cece8c2.png') 0 -273px no-repeat; width: 81px; height: 81px; }
+.icon-adv-money { background: url('../img/icons-s4f1ecb2486.png') 0 -273px no-repeat; width: 81px; height: 81px; }
+
+.icon-fax { background: url('../img/icons-s4f1ecb2486.png') 0 -783px no-repeat; width: 27px; height: 21px; }
+
+.icon-mail { background: url('../img/icons-s4f1ecb2486.png') 0 -814px no-repeat; width: 23px; height: 23px; }
+
+.icon-mtc-color { background: url('../img/icons-s4f1ecb2486.png') 0 -909px no-repeat; width: 24px; height: 24px; }
+
+.icon-viber-small { background: url('../img/icons-s4f1ecb2486.png') 0 -1285px no-repeat; width: 23px; height: 26px; }
+
+.icon-skype-color { background: url('../img/icons-s4f1ecb2486.png') 0 -1159px no-repeat; width: 21px; height: 22px; }
+
+.icon-mob { background: url('../img/icons-s4f1ecb2486.png') 0 -878px no-repeat; width: 28px; height: 21px; }
+
+.icon-call { background: url('../img/icons-s4f1ecb2486.png') 0 -610px no-repeat; width: 21px; height: 21px; }
 
 .l { *zoom: 1; }
 .l:after { content: " "; display: table; clear: both; }
@@ -211,7 +225,7 @@ h4, .h4 { font-size: 18px; }
 .comm .slider__item { height: 350px; padding: 2px; }
 .comm .comm__item { font-size: 17px; color: #222; }
 .comm .comm__text { position: relative; padding-bottom: 25px; border-bottom: 1px solid #b7c380; margin-bottom: 25px; }
-.comm .comm__text:before { content: ""; position: absolute; bottom: -11px; left: 48px; background: url('../img/icons-sff1cece8c2.png') 0 -942px no-repeat; width: 17px; height: 11px; }
+.comm .comm__text:before { content: ""; position: absolute; bottom: -11px; left: 48px; background: url('../img/icons-s4f1ecb2486.png') 0 -1138px no-repeat; width: 17px; height: 11px; }
 
 .footer .footer__in { max-width: 1158px; margin: 0 auto; background: #7d9601; text-align: center; padding: 35px 25px 10px; }
 .footer .footer__adress { margin-bottom: 20px; }
@@ -234,7 +248,7 @@ h4, .h4 { font-size: 18px; }
 @media only screen and (max-width: 767px) { .hamburger { right: 10px; top: 16px; } }
 
 .mob-menu { position: absolute; left: 0; right: 0; top: 0; padding-bottom: 105px; padding-top: 70px; background: #b3cb3b; text-align: center; z-index: 99; }
-.mob-menu .mob-menu__close { position: absolute; top: 36px; right: 36px; background: url('../img/icons-sff1cece8c2.png') 0 -646px no-repeat; width: 30px; height: 30px; }
+.mob-menu .mob-menu__close { position: absolute; top: 36px; right: 36px; background: url('../img/icons-s4f1ecb2486.png') 0 -713px no-repeat; width: 30px; height: 30px; }
 .mob-menu .mob-menu__list { margin-bottom: 60px; }
 .mob-menu .mob-menu__list li { margin-bottom: 30px; }
 .mob-menu .mob-menu__list li a { font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; text-transform: uppercase; color: #222; }
@@ -313,7 +327,8 @@ h4, .h4 { font-size: 18px; }
 .input.has-error .error__alert, .textarea.has-error .error__alert { display: block; }
 
 .textarea { position: relative; padding-bottom: 20px; }
-.textarea:after { content: ""; position: absolute; bottom: 30px; right: 0; width: 0px; height: 0px; border-style: solid; border-width: 0 0 9px 13px; border-color: transparent transparent #cecece transparent; pointer-events: none; -moz-transition: border-color 300ms; -o-transition: border-color 300ms; -webkit-transition: border-color 300ms; transition: border-color 300ms; }
+.textarea:after { content: ""; position: absolute; bottom: 35px; right: 0; width: 0px; height: 0px; border-style: solid; border-width: 0 0 9px 13px; border-color: transparent transparent #cecece transparent; pointer-events: none; -moz-transition: border-color 300ms; -o-transition: border-color 300ms; -webkit-transition: border-color 300ms; transition: border-color 300ms; }
+.form_half .textarea:after { bottom: 30px; }
 .textarea.is-focused:after { width: 0px; height: 0px; border-style: solid; border-width: 0 0 9px 13px; border-color: transparent transparent #2d5a23 transparent; }
 .textarea.has-error:after { width: 0px; height: 0px; border-style: solid; border-width: 0 0 9px 13px; border-color: transparent transparent #ff0000 transparent; }
 .textarea textarea { height: 60px; padding: 16px; max-width: 100%; min-width: 100%; max-height: 200px; }
@@ -425,6 +440,76 @@ h4, .h4 { font-size: 18px; }
 @media only screen and (max-width: 767px) { .doctors .doctors__name { font-size: 19px; margin-bottom: 10px; } }
 .doctors .doctors__job { font-size: 15px; margin-bottom: 20px; }
 
+.map { position: relative; height: 390px; }
+.map > div { position: absolute; top: 0; bottom: 0; right: 0; left: 0; }
+
+.contacts .contacts__topper { *zoom: 1; }
+.contacts .contacts__topper:after { content: " "; display: table; clear: both; }
+.contacts .contacts__topper .h1 { float: left; margin-bottom: 35px; }
+.contacts .contacts__topper .btn { float: right; }
+@media only screen and (max-width: 480px) { .contacts .contacts__topper { text-align: center; margin-bottom: 40px; }
+  .contacts .contacts__topper .h1 { float: none; margin-bottom: 20px; }
+  .contacts .contacts__topper .btn { float: none; } }
+.contacts .tabs .tabs__nav { width: auto; padding-top: 0; }
+@media only screen and (max-width: 600px) { .contacts .tabs .tabs__nav { width: 100%; text-align: center; } }
+.contacts .tabs .tabs__nav li a { width: 195px; text-align: center; color: #222; height: 37px; line-height: 37px; font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; text-transform: uppercase; font-size: 15px; }
+.contacts .tabs .tabs__nav li a:hover span { border-bottom: none; }
+@media only screen and (max-width: 600px) { .contacts .tabs .tabs__nav li a { width: auto; padding: 0 35px; } }
+.contacts .tabs .tabs__nav li.is-active a { background: #fdbe61; }
+.contacts .tabs .tabs__content { clear: both; *zoom: 1; padding-top: 46px; overflow: visible; }
+.contacts .tabs .tabs__content:after { content: " "; display: table; clear: both; }
+
+.number { display: inline-block; vertical-align: middle; margin-left: 30px; margin-bottom: 15px; font-size: 17px; color: #222; text-decoration: none; }
+.number span { display: inline-block; vertical-align: middle; }
+.number span:first-child { margin-right: 3px; }
+.number.number_viber { color: #b580e0; }
+.number.number_skype { font-size: 13px; color: #00aeec; }
+.number.number_map { margin-left: 0; font-size: 13px; color: #c7d6df; }
+
+.number-list .number { position: relative; padding-left: 35px; margin-bottom: 0; }
+.number-list .number span { position: absolute; top: 50%; left: 0; -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); -webkit-transform: translateY(-50%); transform: translateY(-50%); }
+
+.route .h1 { margin-bottom: 30px; }
+.route .h2, .route .h3 { margin-bottom: 5px; }
+.route > p { color: #222; font-size: 15px; }
+.route .route__row { font-size: 0; border-top: 1px solid #cecece; padding: 30px 0; }
+.route .route__row:first-child { border-top: none; }
+.route .route__col { display: inline-block; vertical-align: top; width: 25%; font-size: 17px; color: #969696; padding-right: 5px; }
+.route .route__col p { color: #222; margin-bottom: 0; font-size: 15px; text-align: left; }
+.route .route__col p span { display: inline-block; margin-left: 10px; }
+.route .route__col a { color: #222; font-size: 15px; }
+.route .route__col a:hover { text-decoration: none; }
+.route .route__col a.number { font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; color: #222; margin-left: 0; }
+.route .route__col a.number.number_viber { color: #b580e0; }
+.route .route__col a.number.number_skype { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 15px; color: #00aeec; }
+.route .route__col a.number.number_mail { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; color: #222; overflow: hidden; -ms-text-overflow: ellipsis; text-overflow: ellipsis; white-space: nowrap; }
+.route .route__col.small { width: 16%; }
+.route .route__col.wide { width: 84%; font-size: 0; }
+.route .route__col.wide .route__col.info { width: 33.3%; }
+.route .route__col.info { width: 28%; }
+.route .route__col.wide-link { width: 75%; }
+.route .route__col.wide-link a { display: inline-block; max-width: 100%; overflow: hidden; -ms-text-overflow: ellipsis; text-overflow: ellipsis; white-space: nowrap; }
+@media only screen and (max-width: 1024px) { .route .route__col { font-size: 15px; margin-bottom: 5px; }
+  .route .route__col p { font-size: 15px; } }
+@media only screen and (max-width: 768px) { .route .route__col.wide { width: 75%; }
+  .route .route__col.wide .route__col.info { width: 100%; display: block; margin-bottom: 5px; }
+  .route .route__col.wide .route__col.info .number { margin-bottom: 0; }
+  .number-list .route .route__col.wide .route__col.info .number { margin-bottom: 5px; }
+  .route .route__col.small { width: 25%; }
+  .route .route__col.info { width: 75%; } }
+
+.popup { position: fixed; top: 0; bottom: 0; right: 0; left: 0; background: rgba(0, 0, 0, 0.7); text-align: center; font-size: 0; overflow-y: auto; z-index: 999; }
+.popup:before { content: ""; display: inline-block; vertical-align: middle; width: 0; height: 100%; }
+.popup .popup__in { position: relative; display: inline-block; vertical-align: middle; background: #fff; width: 600px; padding: 55px 48px 50px; }
+@media only screen and (max-width: 700px) { .popup .popup__in { width: 100%; padding: 55px 28px 30px; } }
+@media only screen and (max-width: 480px) { .popup .popup__in { padding: 55px 16px 30px; } }
+.popup .popup__close { position: absolute; top: -31px; right: -48px; background: url('../img/icons-s4f1ecb2486.png') 0 -677px no-repeat; width: 26px; height: 26px; opacity: 0.7; -moz-transition: opacity 300ms; -o-transition: opacity 300ms; -webkit-transition: opacity 300ms; transition: opacity 300ms; }
+.popup .popup__close:hover { opacity: 1; }
+@media only screen and (max-width: 1024px) { .popup .popup__close { top: 20px; right: 20px; background: url('../img/icons-s4f1ecb2486.png') 0 -641px no-repeat; width: 26px; height: 26px; opacity: 1; } }
+@media only screen and (max-width: 568px) { .popup .popup__close { top: 15px; right: 15px; } }
+.popup .popup__content .h1 { text-align: center; margin-bottom: 40px; }
+@media only screen and (max-width: 600px) { .popup .popup__content .h1 { margin-bottom: 20px; } }
+
 .license .h1 { margin-bottom: 30px; }
 .license .license__list { font-size: 0; margin-left: -3%; }
 @media only screen and (max-width: 900px) { .license .license__list { margin-left: -5%; } }
@@ -465,7 +550,7 @@ h4, .h4 { font-size: 18px; }
 @media only screen and (max-width: 767px) { .news .date { text-align: center; } }
 .news .news__all { text-align: center; }
 
-.icon-timing { display: inline-block; background: url('../img/icons-sff1cece8c2.png') 0 -997px no-repeat; width: 18px; height: 18px; }
+.icon-timing { display: inline-block; background: url('../img/icons-s4f1ecb2486.png') 0 -1225px no-repeat; width: 18px; height: 18px; }
 
 .slick-slider { position: relative; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -ms-touch-action: pan-y; touch-action: pan-y; -webkit-tap-highlight-color: transparent; }
 .slick-slider:hover .slick-prev, .slick-slider:hover .slick-next { -moz-transform: translateX(0); -ms-transform: translateX(0); -webkit-transform: translateX(0); transform: translateX(0); }
@@ -501,9 +586,9 @@ h4, .h4 { font-size: 18px; }
 .slick-prev:before, .slick-next:before { height: 82px; line-height: 82px; -moz-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
 @media only screen and (max-width: 1024px) { .slick-prev, .slick-next { opacity: 0; } }
 
-.slick-prev { left: 12px; background: url('../img/icons-sff1cece8c2.png') 0 -877px no-repeat; width: 26px; height: 55px; }
+.slick-prev { left: 12px; background: url('../img/icons-s4f1ecb2486.png') 0 -1073px no-repeat; width: 26px; height: 55px; }
 
-.slick-next { right: 12px; background: url('../img/icons-sff1cece8c2.png') 0 -781px no-repeat; width: 26px; height: 55px; }
+.slick-next { right: 12px; background: url('../img/icons-s4f1ecb2486.png') 0 -977px no-repeat; width: 26px; height: 55px; }
 
 .slick-dots { text-align: center; position: absolute; margin: 0; bottom: 47px; right: 32px; }
 .slick-dots li { position: relative; display: inline-block; padding: 0 7px; }
@@ -573,7 +658,7 @@ h4, .h4 { font-size: 18px; }
 .fancybox-title-over-wrap { position: absolute; bottom: 0; left: 0; color: #fff; padding: 10px; background: #000; background: rgba(0, 0, 0, 0.8); }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) { #fancybox-loading div { background-image: url("../img/fancybox_loading@2x.gif"); background-size: 24px 24px; } }
-.fancybox-close { position: absolute; top: -33px; right: -48px; background: url('../img/icons-sff1cece8c2.png') 0 -610px no-repeat; width: 26px; height: 26px; cursor: pointer; z-index: 8040; opacity: 0.7; -moz-transition: opacity 300ms; -o-transition: opacity 300ms; -webkit-transition: opacity 300ms; transition: opacity 300ms; }
+.fancybox-close { position: absolute; top: -33px; right: -48px; background: url('../img/icons-s4f1ecb2486.png') 0 -677px no-repeat; width: 26px; height: 26px; cursor: pointer; z-index: 8040; opacity: 0.7; -moz-transition: opacity 300ms; -o-transition: opacity 300ms; -webkit-transition: opacity 300ms; transition: opacity 300ms; }
 .fancybox-close:hover { opacity: 1; }
 @media only screen and (max-width: 1024px) { .fancybox-close { display: none; } }
 
@@ -582,8 +667,8 @@ h4, .h4 { font-size: 18px; }
 .fancybox-nav span { position: absolute; top: 50%; margin-top: -27px; cursor: pointer; z-index: 8040; visibility: hidden; opacity: 0; -moz-transition: opacity 300ms; -o-transition: opacity 300ms; -webkit-transition: opacity 300ms; transition: opacity 300ms; }
 @media only screen and (max-width: 768px) { .fancybox-nav span { visibility: visible; opacity: 1; } }
 .fancybox-nav.fancybox-prev { left: 0; }
-.fancybox-nav.fancybox-prev span { left: 10px; background: url('../img/icons-sff1cece8c2.png') 0 -877px no-repeat; width: 26px; height: 55px; }
+.fancybox-nav.fancybox-prev span { left: 10px; background: url('../img/icons-s4f1ecb2486.png') 0 -1073px no-repeat; width: 26px; height: 55px; }
 .fancybox-nav.fancybox-next { right: 0; }
-.fancybox-nav.fancybox-next span { right: 10px; background: url('../img/icons-sff1cece8c2.png') 0 -781px no-repeat; width: 26px; height: 55px; }
+.fancybox-nav.fancybox-next span { right: 10px; background: url('../img/icons-s4f1ecb2486.png') 0 -977px no-repeat; width: 26px; height: 55px; }
 
 .help-block { display: none; }
