--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -109,11 +109,11 @@ body
 h1, .h1, h2, .h2, h4, .h4
 	+light	
 	line-height: 1.3
+	+r(767)
+		text-align: center
 h1, .h1
 	font-size: 32px
 	margin-bottom: 25px
-	+r(767)
-		text-align: center
 h2, .h2
 	font-size: 26px
 	margin-bottom: 30px
@@ -210,9 +210,21 @@ h4, .h4
 .icon-adv-teeth
 	+s(adv-teeth)
 .icon-adv-money
-	+s(adv-money)						
-
-
+	+s(adv-money)	
+.icon-fax
+	+s(fax)						
+.icon-mail
+	+s(mail)
+.icon-mtc-color
+	+s(mtc-color)
+.icon-viber-small
+	+s(viber-small)
+.icon-skype-color
+	+s(skype-color)		
+.icon-mob
+	+s(mob)		
+.icon-call
+	+s(call)	
 
 
 
