--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -532,7 +532,7 @@
 		padding: 0 16px
 		border-bottom: 2px solid #cecece
 		border-width: 0 0 2px 0
-		+semibold
+		+proximanova
 		font-size: 19px
 		color: $dark
 		+tr(border-color 300ms)
@@ -541,7 +541,7 @@
 			font-size: 19px
 			color: #a6ad9f
 		&:focus
-			border-color: #2d5a23
+			border-color: #7d9601
 			+placeholder
 				font-size: 0
 		&.error
@@ -575,7 +575,7 @@
 			bottom: 30px
 	&.is-focused
 		&:after
-			+arr(13, 9, #2d5a23, br)
+			+arr(13, 9, #7d9601, br)
 	&.has-error
 		&:after
 			+arr(13, 9, #ff0000, br)			 
@@ -625,7 +625,7 @@
 			line-height: 1.6
 	input:checked + div
 		&:before
-			border-color: #fbb959
+			border-color: #819813
 		&:after
 			content: ""
 			position: absolute
