--- a/css/screen.css
+++ b/css/screen.css
@@ -309,13 +309,13 @@ h4, .h4 { font-size: 18px; }
 .form .form__submit { text-align: center; }
 
 .input, .textarea { display: block; text-align: left; }
-.input input, .input textarea, .textarea input, .textarea textarea { width: 100%; height: 55px; padding: 0 16px; border-bottom: 2px solid #cecece; border-width: 0 0 2px 0; font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; color: #222; -moz-transition: border-color 300ms; -o-transition: border-color 300ms; -webkit-transition: border-color 300ms; transition: border-color 300ms; }
+.input input, .input textarea, .textarea input, .textarea textarea { width: 100%; height: 55px; padding: 0 16px; border-bottom: 2px solid #cecece; border-width: 0 0 2px 0; font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; color: #222; -moz-transition: border-color 300ms; -o-transition: border-color 300ms; -webkit-transition: border-color 300ms; transition: border-color 300ms; }
 .input input:-ms-input-placeholder, .input textarea:-ms-input-placeholder, .textarea input:-ms-input-placeholder, .textarea textarea:-ms-input-placeholder { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; color: #a6ad9f; }
 .input input:-moz-placeholder, .input textarea:-moz-placeholder, .textarea input:-moz-placeholder, .textarea textarea:-moz-placeholder { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; color: #a6ad9f; }
 .input input::-moz-placeholder, .input textarea::-moz-placeholder, .textarea input::-moz-placeholder, .textarea textarea::-moz-placeholder { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; color: #a6ad9f; }
 .input input::-webkit-input-placeholder, .input textarea::-webkit-input-placeholder, .textarea input::-webkit-input-placeholder, .textarea textarea::-webkit-input-placeholder { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; color: #a6ad9f; }
 .input input::placeholder, .input textarea::placeholder, .textarea input::placeholder, .textarea textarea::placeholder { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; color: #a6ad9f; }
-.input input:focus, .input textarea:focus, .textarea input:focus, .textarea textarea:focus { border-color: #2d5a23; }
+.input input:focus, .input textarea:focus, .textarea input:focus, .textarea textarea:focus { border-color: #7d9601; }
 .input input:focus:-ms-input-placeholder, .input textarea:focus:-ms-input-placeholder, .textarea input:focus:-ms-input-placeholder, .textarea textarea:focus:-ms-input-placeholder { font-size: 0; }
 .input input:focus:-moz-placeholder, .input textarea:focus:-moz-placeholder, .textarea input:focus:-moz-placeholder, .textarea textarea:focus:-moz-placeholder { font-size: 0; }
 .input input:focus::-moz-placeholder, .input textarea:focus::-moz-placeholder, .textarea input:focus::-moz-placeholder, .textarea textarea:focus::-moz-placeholder { font-size: 0; }
@@ -329,7 +329,7 @@ h4, .h4 { font-size: 18px; }
 .textarea { position: relative; padding-bottom: 20px; }
 .textarea:after { content: ""; position: absolute; bottom: 35px; right: 0; width: 0px; height: 0px; border-style: solid; border-width: 0 0 9px 13px; border-color: transparent transparent #cecece transparent; pointer-events: none; -moz-transition: border-color 300ms; -o-transition: border-color 300ms; -webkit-transition: border-color 300ms; transition: border-color 300ms; }
 .form_half .textarea:after { bottom: 30px; }
-.textarea.is-focused:after { width: 0px; height: 0px; border-style: solid; border-width: 0 0 9px 13px; border-color: transparent transparent #2d5a23 transparent; }
+.textarea.is-focused:after { width: 0px; height: 0px; border-style: solid; border-width: 0 0 9px 13px; border-color: transparent transparent #7d9601 transparent; }
 .textarea.has-error:after { width: 0px; height: 0px; border-style: solid; border-width: 0 0 9px 13px; border-color: transparent transparent #ff0000 transparent; }
 .textarea textarea { height: 60px; padding: 16px; max-width: 100%; min-width: 100%; max-height: 200px; }
 
@@ -345,7 +345,7 @@ h4, .h4 { font-size: 18px; }
 .radio input + div:before { content: ""; position: absolute; top: 0; left: 0; width: 17px; height: 17px; border-radius: 50%; border: 1px solid #cecece; }
 .radio input + div span { display: block; margin-bottom: 5px; font-size: 15px; color: #222; }
 .radio input + div p { font-size: 13px; color: #c5c5c5; line-height: 1.6; }
-.radio input:checked + div:before { border-color: #fbb959; }
+.radio input:checked + div:before { border-color: #819813; }
 .radio input:checked + div:after { content: ""; position: absolute; top: 6px; left: 6px; width: 5px; height: 5px; border-radius: 50%; background: #000; }
 
 .error { text-align: center; }
