--- a/css/screen.css
+++ b/css/screen.css
@@ -467,6 +467,47 @@ h4, .h4 { font-size: 18px; }
 
 .icon-timing { display: inline-block; background: url('../img/icons-sff1cece8c2.png') 0 -997px no-repeat; width: 18px; height: 18px; }
 
+.doctor .doctor__topper { *zoom: 1; padding-left: 2px; margin-bottom: 30px; }
+.doctor .doctor__topper:after { content: " "; display: table; clear: both; }
+@media only screen and (max-width: 767px) { .doctor .doctor__topper { margin-bottom: 10px; } }
+@media only screen and (max-width: 568px) { .doctor .doctor__topper { text-align: center; } }
+.doctor .doctor__img { width: 212px; float: left; margin-right: 32px; font-size: 0; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12); }
+.doctor .doctor__img img { display: block; width: 100%; max-width: 212px; height: auto; }
+@media only screen and (max-width: 568px) { .doctor .doctor__img { float: none; margin-right: 0; display: inline-block; text-align: center; margin-bottom: 20px; } }
+.doctor .doctor__about { overflow: hidden; }
+.doctor .doctor__about p { font-size: 15px; color: #222; }
+@media only screen and (max-width: 767px) { .doctor .doctor__about p { margin-bottom: 10px; } }
+@media only screen and (max-width: 568px) { .doctor .doctor__about { overflow: visible; display: block; } }
+.doctor .doctor__spec { border: 1px solid #cecece; padding: 20px 0; border-width: 1px 0; margin-bottom: 30px; font-size: 15px; }
+.doctor .doctor__spec strong { font-size: 19px; }
+@media only screen and (max-width: 767px) { .doctor .doctor__education .h3 { margin-bottom: 10px; } }
+.doctor .doctor__education p { margin: 10px 0; }
+@media only screen and (max-width: 568px) { .doctor .article ul { text-align: center; }
+  .doctor .article ul li { padding-left: 0; margin-bottom: 10px; }
+  .doctor .article ul li:before { display: none; } }
+
+.nonres { display: table; width: 100%; border-collapse: collapse; table-layout: fixed; background: #ceeec2; border: 1px solid #b7c380; }
+@media only screen and (max-width: 600px) { .nonres { display: block; text-align: center; } }
+.nonres .nonres__img { display: table-cell; vertical-align: middle; width: 210px; text-align: center; font-size: 0; }
+.nonres .nonres__img img { max-width: 90%; }
+@media only screen and (max-width: 900px) { .nonres .nonres__img { width: 150px; } }
+@media only screen and (max-width: 600px) { .nonres .nonres__img { display: block; width: 100%; padding-top: 20px; } }
+.nonres .nonres__content { display: table-cell; vertical-align: top; padding: 32px 32px 32px 0; }
+.nonres .nonres__content .h2 { margin-bottom: 20px; }
+@media only screen and (max-width: 600px) { .nonres .nonres__content { display: block; padding: 20px; } }
+.nonres .nonres__list { font-size: 0; }
+.nonres .nonres__list li { position: relative; display: inline-block; vertical-align: top; width: 50%; margin-bottom: 15px; padding-left: 28px; }
+.nonres .nonres__list li:before { content: ""; position: absolute; top: 10px; left: 0; width: 13px; height: 1px; background: #222; }
+.nonres .nonres__list li a { font-size: 15px; color: #222; letter-spacing: 0.5px; }
+.nonres .nonres__list li a:hover { text-decoration: none; }
+@media only screen and (max-width: 600px) { .nonres .nonres__list li { width: 100%; padding-left: 0; margin-bottom: 8px; }
+  .nonres .nonres__list li:before { display: none; }
+  .nonres .nonres__list li a { font-size: 17px; } }
+
+.block { margin-bottom: 35px; }
+@media only screen and (max-width: 768px) { .block { margin-bottom: 25px; } }
+@media only screen and (max-width: 568px) { .block { margin-bottom: 15px; } }
+
 .slick-slider { position: relative; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -ms-touch-action: pan-y; touch-action: pan-y; -webkit-tap-highlight-color: transparent; }
 .slick-slider:hover .slick-prev, .slick-slider:hover .slick-next { -moz-transform: translateX(0); -ms-transform: translateX(0); -webkit-transform: translateX(0); transform: translateX(0); }
 
