--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -210,6 +210,7 @@
 	padding-bottom: 72px
 	.h2
 		text-align: left
+		margin-bottom: 18px
 	.media__col
 		float: left
 		width: 50%
@@ -226,7 +227,7 @@
 	+r(600)
 		padding: 35px 20px 60px 
 	.slider__item
-		height: 350px
+		height: 240px
 		padding: 2px
 		+r(768)
 			height: auto
@@ -268,7 +269,7 @@
 			.comm__item
 				padding-bottom: 35px	
 	.slider__item
-		height: 350px
+		height: 240px
 		padding: 2px
 	.comm__item
 		font-size: 17px
