--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -381,7 +381,8 @@
 	+r(767)
 		width: 100%
 		float: none
-		margin-left: 0 	
+		margin-left: 0 
+		+order(2)	
 .content
 	overflow: hidden
 	p
@@ -389,7 +390,8 @@
 	+r(767)
 		width: 100%
 		overflow: visible
-		padding: 0 10px 
+		padding: 0 10px
+		+order(1) 
 .article	
 	+light	
 	margin-bottom: 45px
