--- a/css/screen.css
+++ b/css/screen.css
@@ -34,7 +34,7 @@ body { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal
 
 .main { *zoom: 1; max-width: 1158px; margin: 0 auto; background: #fff; padding: 0 25px; }
 .main:after { content: " "; display: table; clear: both; }
-@media only screen and (max-width: 767px) { .main { padding: 0; } }
+@media only screen and (max-width: 767px) { .main { padding: 0; display: -webkit-flex; display: flex; -webkit-flex-direction: column; flex-direction: column; } }
 
 .clr { *zoom: 1; }
 .clr:after { content: " "; display: table; clear: both; }
@@ -69,6 +69,7 @@ h4, .h4 { font-size: 18px; }
 @media only screen and (max-width: 767px) { .grid { text-align: center; } }
 @media only screen and (max-width: 480px) { .grid { margin-left: 0; } }
 .grid .grid__item { display: inline-block; vertical-align: top; width: 30%; margin-left: 3.3%; margin-bottom: 30px; }
+@media only screen and (max-width: 768px) { .grid .grid__item { width: 46%; } }
 @media only screen and (max-width: 767px) { .grid .grid__item { width: 35%; margin-bottom: 25px; } }
 @media only screen and (max-width: 600px) { .grid .grid__item { width: 45%; } }
 @media only screen and (max-width: 480px) { .grid .grid__item { width: 100%; margin-left: 0; text-align: left; } }
@@ -257,11 +258,11 @@ h4, .h4 { font-size: 18px; }
 
 .sidebar { width: 247px; float: right; margin-left: 47px; }
 @media only screen and (max-width: 900px) { .sidebar { width: 212px; margin-left: 25px; } }
-@media only screen and (max-width: 767px) { .sidebar { width: 100%; float: none; margin-left: 0; } }
+@media only screen and (max-width: 767px) { .sidebar { width: 100%; float: none; margin-left: 0; -webkit-order: 2; order: 2; } }
 
 .content { overflow: hidden; }
 .content p { margin-bottom: 20px; }
-@media only screen and (max-width: 767px) { .content { width: 100%; overflow: visible; padding: 0 10px; } }
+@media only screen and (max-width: 767px) { .content { width: 100%; overflow: visible; padding: 0 10px; -webkit-order: 1; order: 1; } }
 
 .article { font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; margin-bottom: 45px; }
 .article h1 { margin-bottom: 25px; }
