--- a/sass/_andrew.sass
+++ b/sass/_andrew.sass
@@ -82,6 +82,7 @@ $green1-l: #b8ce48
 				height: 38px
 				line-height: 38px
 				font-size: 15px
+				+semibold
 				color: $dark
 				text-decoration: none
 				background: $green1-l			
