--- a/css/screen.css
+++ b/css/screen.css
@@ -172,8 +172,10 @@ h4, .h4 { font-size: 18px; }
 .nav > ul > li > a { display: block; padding: 14px 28px; font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 15px; text-transform: uppercase; color: #222; }
 .nav > ul > li > a:hover { text-decoration: none; }
 .nav > ul > li > a.is-active { background: #5d8350; color: #fff; text-decoration: none; }
-@media only screen and (max-width: 767px) { .nav { text-align: center; }
-  .nav > ul > li > a { font-size: 17px; } }
+@media only screen and (max-width: 768px) { .nav { padding: 7px 0; }
+  .nav > ul > li > a { padding: 10px 28px 11px; font-size: 13px; } }
+@media only screen and (max-width: 767px) { .nav { padding: 35px 0; text-align: center; }
+  .nav > ul > li > a { padding: 15px 28px; font-size: 17px; } }
 
 .main-wrap { padding: 0 28px; }
 .main-wrap .h1 { margin-bottom: 19px; }
@@ -288,7 +290,7 @@ h4, .h4 { font-size: 18px; }
 @media only screen and (max-width: 767px) { .adv .adv__item { margin-bottom: 10px; } }
 .adv .adv__icon { width: 81px; float: left; margin-right: 7%; }
 .adv .adv__text { overflow: hidden; padding-right: 7%; }
-.adv .adv__text p { font-size: 15px; color: #222; text-align: left; }
+.adv .adv__text p { font-size: 17px; color: #222; text-align: left; font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; }
 @media only screen and (max-width: 767px) { .adv .adv__text .h3 { margin-bottom: 8px; }
   .adv .adv__text p { margin-bottom: 0; } }
 
@@ -532,7 +534,7 @@ h4, .h4 { font-size: 18px; }
 .pagination ul { display: inline-block; border: 1px solid #7e960d; }
 .pagination ul li { display: inline-block; border-left: 1px solid #7e960d; }
 .pagination ul li:first-child { border-left: none; }
-.pagination ul li a { display: block; width: 47px; height: 38px; line-height: 38px; font-size: 15px; color: #222; text-decoration: none; background: #b8ce48; -moz-transition: color 300ms; -o-transition: color 300ms; -webkit-transition: color 300ms; transition: color 300ms; }
+.pagination ul li a { display: block; width: 47px; height: 38px; line-height: 38px; font-size: 15px; font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; color: #222; text-decoration: none; background: #b8ce48; -moz-transition: color 300ms; -o-transition: color 300ms; -webkit-transition: color 300ms; transition: color 300ms; }
 .pagination ul li a:hover, .pagination ul li a.is-active { color: #fff; }
 .pagination ul li a.is-active { background: #7e960d; }
 
