--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -138,12 +138,21 @@
 					background: #5d8350
 					color: #fff
 					text-decoration: none 	
-	+r(767)
+	+r(768)
+		padding: 7px 0 
+		& > ul
+			& > li
+				& > a
+					padding: 10px 28px 11px
+					font-size: 13px
+	+r(767)	
+		padding: 35px 0 
 		text-align: center
 		& > ul
 			& > li
 				& > a
-					font-size: 17px				
+					padding: 15px 28px
+					font-size: 17px							
 .main-wrap
 	padding: 0 28px 	
 	.h1
@@ -453,9 +462,10 @@
 		overflow: hidden
 		padding-right: 7%
 		p
-			font-size: 15px
+			font-size: 17px
 			color: $dark
 			text-align: left
+			+light
 		+r(767)
 			.h3
 				margin-bottom: 8px
